Bug fix greybox scroll on iOS

--- a/assessment/mathtest.css
+++ b/assessment/mathtest.css
@@ -727,14 +727,20 @@ input[type=submit]:hover, button:hover,input[type=button]:hover {
   width: 400px;
   height: 400px;
   z-index: 150;
-  -webkit-overflow-scrolling: touch;
 }
 
+#GB_frameholder {
+	position: absolute;
+	overflow: auto;
+	width: 100%;
+	height: 500px;
+	-webkit-overflow-scrolling: touch;
+}
 #GB_frame {
   border: 0;
-  overflow: auto;
   width: 100%;
-  height: 378px;
+  height: 100%;
+  position: absolute;
 }
 
 #GB_caption {
